Incremental work - Fixing startup on boot - Added shutdown command - Expanding Android functionality