@@ -25,11 +25,12 @@ import com.spacetimeinsight.nucleuslib.datamapped.*;
 import com.spacetimeinsight.nucleuslib.responsehandlers.*;
 import com.spacetimeinsight.nucleuslib.types.*;
 import com.spacetimeinsight.protobuf.nano.EnvDataProto;
+import org.pmw.tinylog.Logger;
 
-import javax.xml.bind.DatatypeConverter;
 import java.io.*;
 import java.net.URL;
 import java.util.*;
+
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
@@ -37,7 +38,8 @@ import java.util.concurrent.TimeUnit;
 import java.util.logging.Handler;
 import java.util.logging.Level;
 import java.util.logging.LogManager;
-import java.util.logging.Logger;
+
+import static com.spacetimeinsight.example.bbgdemo.Driver.*;
 
 /**
  * Demonstration BeagleBone
@@ -68,7 +70,7 @@ public class BeagleBone implements NucleusClientListener
             }
         }
 
-        Logger rootLogger = LogManager.getLogManager().getLogger("");
+        java.util.logging.Logger rootLogger = LogManager.getLogManager().getLogger("");
         rootLogger.setLevel(level);
         for (Handler h : rootLogger.getHandlers()) {
             h.setLevel(level);
@@ -81,64 +83,64 @@ public class BeagleBone implements NucleusClientListener
         BufferedReader stdInputReader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
         String stdInputStr = stdInputReader.readLine();
 
-        Driver.manufacturer = "Seeed";
-        Driver.serialNumber = stdInputStr;
-        Driver.deviceType = DeviceType.MICRO_CONTROLLER.getValue();
-        Driver.modelIdentifier = "BeagleBone Black";
-        Driver.os = "Debian";
-        Driver.osVersion = "8.7";
-        Driver.screenName = stdInputStr;
+        manufacturer = "Seeed";
+        serialNumber = stdInputStr;
+        deviceType = DeviceType.MICRO_CONTROLLER.getValue();
+        modelIdentifier = "BeagleBone Black";
+        os = "Debian";
+        osVersion = "8.7";
+        screenName = stdInputStr;
 
-        String namespace = "com." + Driver.manufacturer + "." + (Driver.serialNumber == null ? UUID.randomUUID().toString() : Driver.serialNumber);
+        String namespace = "com." + manufacturer + "." + (serialNumber == null ? UUID.randomUUID().toString() : serialNumber);
 
         // Sadly, there is a bug in nucleus right now so all dashes need to be underbars
         String deviceID = UUID.nameUUIDFromBytes(namespace.getBytes()).toString().replaceAll("-", "_");
 
-        System.out.println("Using the following values:" +
+        Logger.info("Using the following values:" +
                                    "\n  DeviceID:      " + deviceID +
-                                   "\n  Screen Name:   " + Driver.screenName +
-                                   "\n  Location:      " + Driver.myLocation +
-                                   "\n  Serial Number: " + Driver.serialNumber);
+                                   "\n  Screen Name:   " + screenName +
+                                   "\n  Location:      " + myLocation +
+                                   "\n  Serial Number: " + serialNumber);
 
 
-        ClientDevice device = NucleusFactory.clientDevice(deviceID, DeviceType.discoverMatchingEnum(Driver.deviceType),
-                                                          Driver.manufacturer, Driver.modelIdentifier, Driver.serialNumber,
-                                                          Driver.osVersion, Driver.os);
-        Driver.nucleusClient = new NucleusClient(device, Driver.apiAccountID, Driver.apiAccountToken);
-        Driver.nucleusClient.setServerTarget("http", Driver.SERVER_URL, Driver.SERVER_PORT);
-        Driver.nucleusClient.setActivePartition(Driver.apiKey, Driver.apiToken);
-        Driver.nucleusClient.addListener(this);
+        ClientDevice device = NucleusFactory.clientDevice(deviceID, DeviceType.discoverMatchingEnum(deviceType),
+                                                          manufacturer, modelIdentifier, serialNumber,
+                                                          osVersion, os);
+        nucleusClient = new NucleusClient(device, apiAccountID, apiAccountToken);
+        nucleusClient.setServerTarget("http", SERVER_URL, SERVER_PORT);
+        nucleusClient.setActivePartition(apiKey, apiToken);
+        nucleusClient.addListener(this);
 
         // Must be done after the client has been initialized
-        device.setScreenName(Driver.screenName);
-        device.setCurrentLocation(Driver.myLocation, new DeviceSetDatapointResponseHandler() {
+        device.setScreenName(screenName);
+        device.setCurrentLocation(myLocation, new DeviceSetDatapointResponseHandler() {
             @Override
             public void onSuccess(Datapoint updatedDatapoint) {
-                System.out.println("Successfully set my location to: " + Driver.myLocation);
+                Logger.info("Successfully set my location to: " + myLocation);
             }
 
             @Override
             public void onFailure(OperationStatus operationStatus, int statusCode, String errorMessage) {
-                System.out.println("FAILED TO SET LOCATION. (" + statusCode + "), " + operationStatus + ", " + errorMessage);
+                Logger.error("FAILED TO SET LOCATION. (" + statusCode + "), " + operationStatus + ", " + errorMessage);
             }
         });
     }
 
     private void joinOrCreateChannel(final String channelName) {
-        System.out.println("Find channel by: " + channelName);
-        final ChannelService channelService = Driver.nucleusClient.getChannelService();
+        Logger.info("Find channel by: " + channelName);
+        final ChannelService channelService = nucleusClient.getChannelService();
         channelService.findChannelByName(channelName, null, new ChannelFindByNameResponseHandler() {
 
             @Override
             public void onFailure(OperationStatus operationStatus, int statusCode, String errorMessage) {
-                System.out.println("Failed to find by name. " + operationStatus + ", statusCode = " +
+                Logger.error("Failed to find by name. " + operationStatus + ", statusCode = " +
                             statusCode + ", errorMessage = " + errorMessage);
                 System.exit(-1);
             }
 
             @Override
             public void onSuccess(final String channelRef) {
-                System.out.println("Found channel by name. channelRef = " + channelRef);
+                Logger.info("Found channel by name. channelRef = " + channelRef);
 
                 if ( channelRef == null ) {
                     createChannel(channelName);
@@ -147,7 +149,7 @@ public class BeagleBone implements NucleusClientListener
                     try {
                         joinChannel(channelRef);
                     } catch ( NucleusException e ) {
-                        System.out.println("Failed to join channel. channelRef = " + channelRef);
+                        Logger.error("Failed to join channel. channelRef = " + channelRef);
                         e.printStackTrace();
                     }
                 }
@@ -156,27 +158,27 @@ public class BeagleBone implements NucleusClientListener
     }
 
     private void createChannel(String channelName) {
-        final ChannelService channelService = Driver.nucleusClient.getChannelService();
-        GeoCircle circle = new GeoCircle(Driver.myLocation.getLatitude(), Driver.myLocation.getLongitude(), 100);
+        final ChannelService channelService = nucleusClient.getChannelService();
+        GeoCircle circle = new GeoCircle(myLocation.getLatitude(), myLocation.getLongitude(), 100);
         channelService.createChannel(circle, -1, -1, channelName, null, "Site", false,
-                                     null, Driver.shortDescription, Driver.longDescription, new ChannelCreateResponseHandler() {
+                                     null, shortDescription, longDescription, new ChannelCreateResponseHandler() {
                     @Override
                     public void onSuccess(String channelRef) {
                         // Creating a channel automatically joins you to it, but does not automatically switch
                         // you into it.
-                        System.out.println("Successfully created channel. channelRef = " + channelRef);
+                        Logger.info("Successfully created channel. channelRef = " + channelRef);
                         channelService.switchChannel(channelRef, new GeneralResponseHandler() {
                             @Override
                             public void onSuccess() {
                                 // Now that we have our channel created, we want to enable polling on it so that we
                                 // can respond to any chat messages to display on our OLED
-                                Driver.nucleusClient.enablePolling(true);
+                                nucleusClient.enablePolling(true);
                                 sendLoop();
                             }
 
                             @Override
                             public void onFailure(OperationStatus operationStatus, int statusCode, String errorMessage) {
-                                System.out.println("Failed to create channel. " + operationStatus + ", statusCode = " +
+                                Logger.error("Failed to create channel. " + operationStatus + ", statusCode = " +
                                             statusCode + ", errorMessage = " + errorMessage);
                                 System.exit(-1);
                             }
@@ -185,7 +187,7 @@ public class BeagleBone implements NucleusClientListener
 
                     @Override
                     public void onFailure(OperationStatus operationStatus, int statusCode, String errorMessage) {
-                        System.out.println("Failed to create channel. " + operationStatus + ", statusCode = " +
+                        Logger.error("Failed to create channel. " + operationStatus + ", statusCode = " +
                                     statusCode + ", errorMessage = " + errorMessage);
                         System.exit(-1);
                     }
@@ -193,7 +195,7 @@ public class BeagleBone implements NucleusClientListener
     }
 
     private void joinChannel(final String channelRef) throws NucleusException {
-        final ChannelService channelService = Driver.nucleusClient.getChannelService();
+        final ChannelService channelService = nucleusClient.getChannelService();
 
         Map<JoinOption, Object> joinOptions = new HashMap<>();
         List<TopicOffset> offsets = new ArrayList<>();
@@ -204,7 +206,7 @@ public class BeagleBone implements NucleusClientListener
         channelService.joinChannel(channelRef, joinOptions, new ChannelJoinResponseHandler() {
             @Override
             public void onFailure(OperationStatus operationStatus, int statusCode, String errorMessage) {
-                System.out.println("Failed to join channel. channelRef=" + channelRef +
+                Logger.error("Failed to join channel. channelRef=" + channelRef +
                             " : " + operationStatus + " : statusCode = " +
                             statusCode + " : errorMessage = " + errorMessage);
                 System.exit(-1);
@@ -212,7 +214,7 @@ public class BeagleBone implements NucleusClientListener
 
             @Override
             public void onSuccess(final String channelRef, List<TopicOffset> offsets) {
-                System.out.println("joinChannel.onSuccess");
+                Logger.info("joinChannel.onSuccess");
                 channelService.switchChannel(channelRef, new GeneralResponseHandler() {
                     @Override
                     public void onSuccess() {
@@ -223,7 +225,7 @@ public class BeagleBone implements NucleusClientListener
 
                     @Override
                     public void onFailure(OperationStatus operationStatus, int statusCode, String errorMessage) {
-                        System.out.println("Failed to create channel. " + operationStatus + ", statusCode = " +
+                        Logger.error("Failed to create channel. " + operationStatus + ", statusCode = " +
                                     statusCode + ", errorMessage = " + errorMessage);
                         System.exit(-1);
                     }
@@ -233,15 +235,15 @@ public class BeagleBone implements NucleusClientListener
     }
 
     private void sendLoop() {
-        System.out.println("Starting run loop...");
+        Logger.info("Starting run loop...");
         Runnable r = () -> {
-            Channel channel = Driver.nucleusClient.getCurrentChannel();
+            Channel channel = nucleusClient.getCurrentChannel();
             List<TopicType> pollTypes = new ArrayList<>();
             pollTypes.add(TopicType.EChannelMessage);
             pollTypes.add(TopicType.EProperty);
             channel.setPollTopics(pollTypes);
 
-            Driver.nucleusClient.enablePolling(true);
+            nucleusClient.enablePolling(true);
 
             final Runnable timer = () -> {
                 try {
@@ -249,7 +251,7 @@ public class BeagleBone implements NucleusClientListener
                 }
                 catch( Exception e ) {
                     e.printStackTrace();
-                    System.out.println("Caught exception: " + e.getMessage());
+                    Logger.error("Caught exception: " + e.getMessage());
                 }
             };
             scheduler.scheduleAtFixedRate(timer, 0, 1, TimeUnit.SECONDS);
@@ -260,38 +262,38 @@ public class BeagleBone implements NucleusClientListener
     }
 
     private void startSession() throws NucleusException {
-        final DeviceService deviceService = Driver.nucleusClient.getDeviceService();
+        final DeviceService deviceService = nucleusClient.getDeviceService();
         deviceService.startSession(new DeviceSessionResponseHandler() {
             @Override
             public void onSuccess(boolean needsProfile, List<String> activeMemberships) {
-                System.out.println("startSession.onSuccess:" + activeMemberships.size());
+                Logger.info("startSession.onSuccess:" + activeMemberships.size());
 
                 if ( needsProfile ) {
-                    ClientDevice clientDevice = Driver.nucleusClient.getClientDevice();
-                    if (Driver.imageData != null) {
-                        clientDevice.setProfileImage(DatatypeConverter.parseBase64Binary(Driver.imageData), Driver.imageType);
+                    ClientDevice clientDevice = nucleusClient.getClientDevice();
+                    if (imageData != null) {
+                        clientDevice.setProfileImage(Base64.getDecoder().decode(Driver.imageData), Driver.imageType);
                     }
                     deviceService.setProfile(new GeneralResponseHandler() {
                         @Override
                         public void onFailure(OperationStatus operationStatus, int statusCode, String errorMessage) {
-                            System.out.println("Failed to update device profile. (" + statusCode + "), " + operationStatus + ", " + errorMessage);
+                            Logger.error("Failed to update device profile. (" + statusCode + "), " + operationStatus + ", " + errorMessage);
                         }
 
                         @Override
                         public void onSuccess() {
-                            System.out.println("Successfully updated profile!");
+                            Logger.info("Successfully updated profile!");
                         }
                     });
                 }
 
                 // These are asynchronous calls, so they may or may not complete before the process moves onto the next
                 // lines of code.
-                joinOrCreateChannel(Driver.channelName);
+                joinOrCreateChannel(channelName);
             }
 
             @Override
             public void onFailure(OperationStatus operationStatus, int statusCode, String errorMessage) {
-                System.out.println("Failed to start device session. " + operationStatus + ", statusCode = " +
+                Logger.error("Failed to start device session. " + operationStatus + ", statusCode = " +
                             statusCode + ", errorMessage = " + errorMessage);
                 System.exit(-1);
             }
@@ -309,19 +311,19 @@ public class BeagleBone implements NucleusClientListener
         EnvData envData = new EnvData(sensorData.timestamp, sensorData.temperature, 0, sensorData.humidity, 0);
 
         EnvDataProto.EnvData envDataProto = envData.toProtoBuffer();
-        DeviceService deviceService = Driver.nucleusClient.getDeviceService();
+        DeviceService deviceService = nucleusClient.getDeviceService();
         Datapoint datapoint = deviceService.newDatapoint("weather", 0, "EnvData", EnvDataProto.EnvData.toByteArray(envDataProto));
-        System.out.println("<<< SENDING DATAPOINT : " + envData);
+        Logger.info("<<< SENDING DATAPOINT : " + envData);
         deviceService.setDatapoint(datapoint, new DeviceSetDatapointResponseHandler() {
             @Override
             public void onSuccess(Datapoint updatedDatapoint) {
-                System.out.println(">>> Successfully set sensor data: "  + envData.toString());
+                Logger.info(">>> Successfully set sensor data: "  + envData.toString());
                 lastSensorData = sensorData;
             }
 
             @Override
             public void onFailure(OperationStatus operationStatus, int statusCode, String errorMessage) {
-                System.out.println("Failed to set datapoint : " + operationStatus + " (" + statusCode + ") - " + errorMessage);
+                Logger.info("Failed to set datapoint : " + operationStatus + " (" + statusCode + ") - " + errorMessage);
                 lastSensorData = null;
             }
         });
@@ -331,18 +333,18 @@ public class BeagleBone implements NucleusClientListener
      *
      */
     private void renewSession()  {
-        System.out.println("Renewing session...");
-        DeviceService deviceService = Driver.nucleusClient.getDeviceService();
+        Logger.info("Renewing session...");
+        DeviceService deviceService = nucleusClient.getDeviceService();
         try {
             deviceService.renewSession(new DeviceSessionResponseHandler() {
                 @Override
                 public void onSuccess(boolean needsProfile, List<String> activeMemberships) {
-                    System.out.println("Successfully renewed device session.");
+                    Logger.info("Successfully renewed device session.");
                 }
 
                 @Override
                 public void onFailure(OperationStatus operationStatus, int statusCode, String errorMsg) {
-                    System.out.println("Failed to renew device session. (" + statusCode + ") - " + errorMsg);
+                    Logger.error("Failed to renew device session. (" + statusCode + ") - " + errorMsg);
                 }
             });
         } catch ( NucleusException e ) {
@@ -351,7 +353,7 @@ public class BeagleBone implements NucleusClientListener
     }
 
     public static void main(String[] args) throws Exception {
-        System.out.println("Starting up beaglebone green demo...");
+        Logger.info("Starting up beaglebone green demo...");
         BeagleBone beagleBone = new BeagleBone(args);
         beagleBone.startSession();
     }
@@ -393,7 +395,7 @@ public class BeagleBone implements NucleusClientListener
 
     @Override
     public void handleRequestError(String command, OperationStatus operationStatus, int statusCode, String errorMessage) {
-        System.out.println("Handling request error. Command = " + command +
+        Logger.info("Handling request error. Command = " + command +
                       ", operationStatus = " + operationStatus.toString() +
                       ", statusCode = " + statusCode +
                       ", errorMessage = " + errorMessage);
@@ -402,7 +404,7 @@ public class BeagleBone implements NucleusClientListener
             renewSession();
         }
         else {
-            System.out.println("Handling request error. " + command + " (" + statusCode + ") " + errorMessage);
+            Logger.error("Handling request error. " + command + " (" + statusCode + ") " + errorMessage);
         }
     }
 
@@ -413,7 +415,7 @@ public class BeagleBone implements NucleusClientListener
 
     @Override
     public void onError(int errorNo, String errorMessage) {
-        System.out.println("Handling error. errorNo = " + errorNo + ", errorMessage = " + errorMessage);
+        Logger.error("Handling error. errorNo = " + errorNo + ", errorMessage = " + errorMessage);
     }
 
     @Override
@@ -438,7 +440,7 @@ public class BeagleBone implements NucleusClientListener
 
     @Override
     public void onPropertyChange(String channelRef, Property property) {
-        System.out.println(">>> Handling channel property " + property + " >> " + LED_FILENAME);
+        Logger.info(">>> Handling channel property " + property);
         // We got a property change. For our BeagleBone demo, the property is the LED light
         if ( property.getName().equals("led") ) {
             String valueStr = property.getValue();
@@ -450,6 +452,46 @@ public class BeagleBone implements NucleusClientListener
                 e.printStackTrace();
             }
         }
+        else if ( property.getName().equals("shutdown") ) {
+            // Make sure to reset the shutdown property
+            Channel channel = nucleusClient.getChannel(channelRef);
+            channel.setProperty("shutdown", "-1", new GeneralResponseHandler() {
+                @Override
+                public void onSuccess() {
+                    String valueStr = property.getValue();
+                    try {
+                        shutdown(valueStr);
+                    }
+                    catch (IOException e) {
+                        e.printStackTrace();
+                        Logger.error("Failed to shutdown device!");
+                    }
+                }
+
+                @Override
+                public void onFailure(OperationStatus operationStatus, int statusCode, String errorMsg) {
+                    Logger.error("---- NOT SHUTTING DOWN ----");
+                    Logger.error("Failed to reset shutdown! " + operationStatus + " : (" + statusCode + ") - " +
+                                               errorMsg);
+                }
+            });
+        }
+    }
+
+    private void shutdown(String level)
+            throws IOException {
+        if ( "-1".equals(level) ) {
+            return;
+        }
+
+        Logger.info("Shutting down : " + level);
+        Runtime rt = Runtime.getRuntime();
+        String[] commands = {"shutdown", "-h", level};
+        Process proc = rt.exec(commands);
+
+        BufferedReader stdInputReader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
+        String stdInputStr = stdInputReader.readLine();
+        Logger.info("SHUTDOWN: " + stdInputStr);
     }
 
     @Override
@@ -468,7 +510,7 @@ public class BeagleBone implements NucleusClientListener
         MimePart part = parts.get(0);
 
         String message = new String(part.getContent());
-        System.out.println(">>> Handling channel message " + message + " >> " + MESSAGES_FILENAME);
+        Logger.info(">>> Handling channel message " + message + " >> " + MESSAGES_FILENAME);
         try {
             FileWriter fileWriter = new FileWriter(MESSAGES_FILENAME);
             fileWriter.write(message);
